fix: support capture helper on Android 8.1